# middle-python-project-52

./: .env  .env.example  README.md  db.sqlite3
.github/workflows/: hexlet-check.yml
LC_MESSAGES/: django.mo
hexlet-code/: .env  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  sonar-project.properties
hexlet-code/.github/workflows/: sonar.yml
hexlet-code/labels/: forms.py  tests.py  views.py
hexlet-code/labels/migrations/: 0001_initial.py
hexlet-code/labels/templates/labels/: create.html  index.html
hexlet-code/locale/ru/LC_MESSAGES/: django.mo  django.po
hexlet-code/statuses/: admin.py  models.py  tests.py
hexlet-code/statuses/templates/statuses/: create.html  delete.html  update.html
hexlet-code/task_manager/: .gitignore  settings.py  tests.py  urls.py  views.py
hexlet-code/task_manager/users/: forms.py  mixins.py  views.py
hexlet-code/task_manager/users/fixtures/: users.json
hexlet-code/tasks/: forms.py  models.py  tests.py  urls.py  views.py
hexlet-code/tasks/migrations/: 0002_task_executor.py  0003_task_labels.py
hexlet-code/tasks/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
hexlet-code/templates/: base.html  index.html  login.html
hexlet-code/templates/users/: delete.html  index.html  login.html
labels/: admin.py  models.py  urls.py
statuses/: forms.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  views.py
templates/: base.html  index.html
(+22 files in other folders)
